Number of results display adjustments done
